remove java 8 incompatibilities